Fix the modal spacing issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -32,7 +32,7 @@ a:hover{text-decoration: none;}
 @media (min-width: 768px) {
 #guitar h1{font-size: 200px;}
 #ukulele h1{font-size: 200px;}
-body div{max-width: 768px; border-color: yellow;}
+body{max-width: 768px;}
 section{max-width: 768px;}
 section ul li{list-style: none; float:left; width:33%;}
 section ul li img{padding:35px;height:400px; width:285px;}
